# KendryteK210_base_project

./: .gitignore  readme.md
Maixduino_esp32/: CMakeLists.txt  sdkconfig
Maixduino_esp32/arduino/SPIS/: CMakeLists.txt  SPIS.cpp  SPIS.h
Maixduino_esp32/arduino/WiFi/: CMakeLists.txt  WiFi.cpp  WiFi.h  WiFiClient.cpp  WiFiClient.h  WiFiServer.cpp  WiFiServer.h  WiFiUdp.cpp
Maixduino_esp32/arduino/wesp32/: Arduino.h  CMakeLists.txt  WMath.cpp  WMath.h
Maixduino_esp32/main/: CMakeLists.txt  CommandHandler.cpp  CommandHandler.h  Esp32CommandList.h  sketch.ino.cpp
additional/: CMakeLists.txt
additional/cmake/: executable.cmake
additional/lds/: kendryte.ld
additional/src/: entry_point.c
base/: CMakeLists.txt  k.sh
base/src/: asm_test.s  camera_test.cpp  esp32_spi_balmer.cpp  esp32_spi_balmer.h  esp32_tests.cpp  esp32_tests.h  main.c  main.cpp  main.h  test.c
bterminal/: CMakeLists.txt  image_utils.cpp  image_utils.h  main.cpp
bterminal/transport/: network_client.cpp  network_client.h  serial.cpp  serial.h  transport.cpp  transport.h
drivers/MessageDebug/: MessageDebug.cpp  MessageDebug.h
drivers/TBPipe/: TBParse.cpp  TBParse.h  TBParseStruct.h  TBPipe.cpp  TBPipe.h  TBPipeStruct.h  TBinMessage.h  TBinParse.cpp  TBinParse.h  TBinParse.py
drivers/camera/gc0328/include/: cambus.h  gc0328.h  sipeed_i2c.h
drivers/camera/gc0328/src/: gc0328.c
drivers/esp32/: esp32_spi.cpp  esp32_spi.h  spi2_slave.cpp  spi2_slave.h
drivers/esp8266/: esp8266.cpp  esp8266.h
drivers/stm32_program/: stm32_program.cpp  stm32_program.h
py/: balmer_term.py  tcp_server.py
sdk/cmake/: compile-flags.cmake
sdk/lib/drivers/include/: iomem.h
tests/TestTBPipe/: CMakeLists.txt  FillBuffer.cpp  FillBuffer.h  TestTBPipe.code-workspace  TestTBPipe.cpp  TestTBinParse.cpp
tests/emulation/: sleep.cpp  sleep.h  sysctl.cpp  sysctl.h
